outputs/output.278319.out
  File "/home/u00786/Research/optimization/runNumerical.py", line 35
    "mu": mu,
    ^
SyntaxError: invalid syntax
